# EmployeeScheduler

./: .gitignore  README.md  app.py  availability_report.csv  dtypes.py  environment.yml  fix crash.md  gen_synth_data.py  parse_data.py  preferences.csv  pyproject.toml  sandbox.py  solver.py  to_fill.csv
.streamlit/: config.toml  style.css
modules/: dtypes.py  gen_synth_data.py  parse_data.py  solver.py
